--- a/github/workflows/ci-cd.yml
+++ b/github/workflows/ci-cd.yml
@@ -4,7 +4,7 @@ name: CI/CD
 
 on:
   push:
-    branches: [ "main" ]  # Executa quando fizer push na branch main
+    branches: [ "main" ]  
   pull_request:
     branches: [ "main" ]
 
@@ -26,5 +26,4 @@ jobs:
 
     - name: Testa execução do script
       run: docker run -i avaliacao-app python avaliacao.py < test_input.txt
-      # test_input.txt pode conter entradas simuladas se quiser automatizar
 
